Arreglado para que acepte el SDK de BellSoft Liberica 25 full